--- a/contact/contact.html
+++ b/contact/contact.html
@@ -3,25 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="contact.css">
     <title>Document</title>
 </head>
 <body>
     <div class="navbar">
         <div class="AGT">
             <div>
-                <img src="./assets/car.png" class="headimg">
+                <img src="../assets/car.png" class="headimg" alt="Electric car">
             </div>
             <div>
-                 <a href="./home.html"><h8 style="margin-left: 20px;">Adopt Green Transportation</h8></a>
+                <a href="./home.html"><h6 class="logo-text">Adopt Green Transportation</h6></a>
             </div>
-        </div>    
-        <div class="button-container">
-            <a href="./home.html"><button>HOME</button></a>    
-            <a href="./about/about.html"><button>ABOUT</button></a>
-            <a href="./news/news.html"><button>NEWS</button></a>
-            <a href="./contact/contact.html"><button>CONTACT US</button></a>
-            <a href="./sign/sign.html"><button>SIGN IN</button></a>
         </div>
-    </div>  
+        <div class="button-container">
+            <a href="../home.html"><button>HOME</button></a>
+            <a href="../about/about.html"><button>ABOUT</button></a>
+            <a href="../news/news.html"><button>NEWS</button></a>
+            <a href="./contact.html"><button>CONTACT US</button></a>
+            <a href="../sign/sign.html"><button>SIGN IN</button></a>
+        </div>
+    </div>
+
+    <div class="page-content">
+        <header>
+            <div class="container">
+                <h1>Contact Us</h1>
+                <p>We'd love to hear from you. Get in touch with us!</p>
+            </div>
+        </header>
+
+        <div class="container">
+            <div class="contact-form">
+                <h2>Send Us a Message</h2>
+                <form action="#" method="post">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="subject">Subject</label>
+                        <input type="text" id="subject" name="subject" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" required></textarea>
+                    </div>
+                    <button type="submit" id="submit">Send Message</button>
+                </form>
+            </div>
+            <div class="contact-info">
+                <div class="contact-card">
+                    <h3>Contact Information</h3>
+                    <p>Email: contact@adoptgreentransport.com</p>
+                    <p>Phone: +44 7771 418 051</p>
+                    <p>Address: 72C Woolwich road, SE10 0JU</p>
+                </div>
+                <div class="contact-card">
+                    <h3>Business Hours</h3>
+                    <p>Monday - Friday: 9:00 AM - 5:00 PM</p>
+                    <p>Saturday: 10:00 AM - 2:00 PM</p>
+                    <p>Sunday: Closed</p>
+                </div>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <p>&copy; 2025 Adopt Green Transportation. All rights reserved.
+              <br>Email: contact@adoptgreentransport.com
+              <br>Phone: +44 7771 418 051
+            </p>
+        </footer>
+    </div>
 </body>
 </html>
