--- a/home.html
+++ b/home.html
@@ -6,11 +6,13 @@
     <body>
         <div class="navbar">
             <div class="AGT">
-                <div>
-                    <img src="./assets/car.png" class="headimg">
-                </div>
-                <div>
-                     <a href="./home.html"><h8 style="margin-left: 20px;">Adopt Green Transportation</h8></a>
+                <div class="AGT">
+                    <div>
+                        <img src="../assets/car.png" class="headimg" alt="Electric car">
+                    </div>
+                    <div>
+                        <a href="./home.html"><h6 class="logo-text">Adopt Green Transportation</h6></a>
+                    </div>
                 </div>
             </div>    
             <div class="button-container">
