--- a/sign/sign.html
+++ b/sign/sign.html
@@ -7,10 +7,10 @@
     <div class="navbar">
         <div class="AGT">
             <div>
-                <img src="../assets/car.png" class="headimg">
+                <img src="../assets/car.png" class="headimg" alt="Electric car">
             </div>
             <div>
-                 <a href="../home.html"><h8 style="margin-left: 20px;">Adopt Green Transportation</h8></a>
+                <a href="./home.html"><h6 class="logo-text">Adopt Green Transportation</h6></a>
             </div>
         </div>    
         <div class="button-container">
